Fix group header alignment in Scheduler timeline view (T666326)

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -1089,6 +1089,8 @@
 
         .dx-scheduler-group-header {
             .flex-container(row, nowrap);
+
+            -ms-flex-align: center;
             
             padding: 0 10px 0 5px;
             height: auto;
